Fix styles & overflow behavior

--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -3,4 +3,22 @@
     background-color: var(--main-color);
     padding: 2.5em;
     border-radius: 0.4em;
+    max-height: 70vh;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 0px 2em 0.4em rgb(56, 56, 56, 0.4);
+}
+
+::-webkit-scrollbar {
+    width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--main-lighter);
+    border-radius: 4px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 4px;
 }
